fixed video css spacing on splash

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -923,8 +923,8 @@ height: 100%;
 .splash-sign-in {
 display: flex;
 justify-content: space-evenly;
-width: 180px;
-margin-top: 18px;
+width: 10vw;
+margin-top: 1vw;
 }
 
 .splash-text-div h1{
@@ -959,81 +959,38 @@ position: absolute;
     height: 100%;
   }
 
-  #video-violin {
+  .video-splash {
     /* margin-top: 10vh; */
-    width: 80vh;
+    width: 50%;
     /* margin-left: 200px; */
   }
 
-  .splash-violin-div {
+  .splash-video-div {
     display: flex;
     align-items: center;
     margin-top: 5%;
+    width: 80%;
+    /* justify-content: left; */
 
   }
 
-  .splash-band-div {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    margin-top: 5%;
-    /* justify-content: right; */
-    /* margin-bottom: 200px; */
-    /* padding-bottom: 300px; */
-    margin-left: 100px;
+  .video-headings {
+display: flex;
+justify-content: center;
+width: 50%;
   }
 
-  .splash-band2-div {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    margin-top: 5%;
-    /* justify-content: right; */
-    /* margin-bottom: 200px; */
-    padding-bottom: 300px;
-    margin-left: 100px;
-  }
 
-  .splash-band-div h2 {
+
+
+  .splash-video-div h2 {
     position: relative;
-    margin-left: 8%;
-    font-size: 50px;
-    margin-right: 4%;
-    width: 600px;
-    margin-top: 2%;
-  }
+    /* margin-left: 8%; */
+    font-size: 2.5vh;
+    /* margin-right: 4%; */
+    /* width: 40vw; */
 
-  .splash-band2-div h2 {
-    position: relative;
-    margin-left: 8%;
-    font-size: 50px;
-    margin-right: 4%;
-    width: 600px;
-    margin-top: 2%;
-  }
-
-
-
-  #video-band {
-    margin-top: 100px;
-    width: 800px;
-    /* margin-left: 200px; */
-  }
-
-  #video-band2 {
-    margin-top: 100px;
-    width: 800px;
-    margin-left: 100px;
-    /* margin-left: 200px; */
-  }
-
-  .splash-violin-div h2 {
-    position: relative;
-    margin-left: 8%;
-    font-size: 50px;
-    margin-right: 4%;
-    width: 600px;
-    margin-top: 2%;
+    /* margin-top: 2%; */
   }
 
 
